# fa25-prime-directive

./: .gitignore  .gitmodules  CONTRIBUTORS  LICENSE  README.md  build.sh  slam_pi.yaml  test.sh
.github/workflows/: ci.yml
AI/Data_Set/: URL.md
AI/Data_Set/Boardwalk and Fishing Pier images/image1/: variant_debug_log.txt
AI/Data_Set/Boardwalk and Fishing Pier images/image10/: variant_debug_log.txt
AI/Data_Set/Boardwalk and Fishing Pier images/image11/: variant_debug_log.txt
AI/Data_Set/Boardwalk and Fishing Pier images/image12/: variant_debug_log.txt
AI/Data_Set/Boardwalk and Fishing Pier images/image13/: variant_debug_log.txt
AI/Data_Set/Boardwalk and Fishing Pier images/image14/: variant_debug_log.txt
AI/Data_Set/Boardwalk and Fishing Pier images/image15/: variant_debug_log.txt
AI/Data_Set/Boardwalk and Fishing Pier images/image16/: variant_debug_log.txt
AI/Data_Set/Boardwalk and Fishing Pier images/image17/: variant_debug_log.txt
AI/Data_Set/Boardwalk and Fishing Pier images/image18/: variant_debug_log.txt
AI/Data_Set/Boardwalk and Fishing Pier images/image19/: variant_debug_log.txt
AI/Data_Set/Boardwalk and Fishing Pier images/image2/: variant_debug_log.txt
AI/Data_Set/Boardwalk and Fishing Pier images/image20/: variant_debug_log.txt
AI/Image Recognition Testing/: README.md  dataset_matcher_clean.py  matching_results.txt  object_detect_video.py
AI/Image Recognition Testing/Video/: captured_video.avi  faces_detected_video.avi
AI/Image Specific Testing/: Documentation.md  Generate Image Variants.md  Precise Image Detection.md  Precise_image_detection.py  generate_image_variants.py  matching_results.txt  test.py
AI/Overview/: AI 2.md  AI.md  README.md
AI/Testing/: FACE_DETECT_README.md  FACE_DETECT_VIDEO_README.md  Instructions.txt  TEST_README.md  face_detect.py  face_detect_video.py  faces_video_output.avi  test.py
AI/Using webcam in WSL/: CAPTURE_IMAGE_README.md  CAPTURE_VIDEO_README.md  Instructions.txt  captureimage.py  capturevideo.py
AI/Using webcam in WSL/Video/: captured_video.avi
database/Explanation/: Discord.odt  HTML Documentation.odt  Milestone #1.odt  ROSBAG Conversion to CSV and JSON — Documentation.odt  Ros Bags First Steps and Tests.odt  generate_html.py  process_all.py  rosbag_to_csv_json.py
docs/: index.html  styles.css
ws/install/: local_setup.sh  setup.sh
ws/src/gs2_publisher/: CMakeLists.txt  package.xml
ws/src/gs2_publisher/src/: .gs2_node.cpp.swp  gs2_node.cpp
ws/src/gs2_publisher/src/install/: local_setup.sh  setup.sh
ws/src/potato/: package.xml  setup.cfg  setup.py
ws/src/potato/potato/: mission_node.py
ws/src/potato/potato/launch/: mission.launch.py
ws/src/potato/test/: test_mission_import.py  test_mission_state.py
ws/src/ros2_opencv/: package.xml  setup.py
(+287 files in other folders)
