<?xml version="1.0"?>
<package format="3">
  <name>potato_mission</name>
  <version>0.0.1</version>
  <description>Rover mission state machine (starts in FLIGHT)</description>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pyflakes</test_depend>
  <test_depend>pytest</test_depend>
  <test_depend>launch_testing</test_depend>

  <export/>
</package>
